# Recipe-Manager

./: .coveragerc  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  run.sh  scripts.py  setup.sh  test.sh
recipe-manager/: app.py
recipe_manager/: __init__.py  app.py  config.py
recipe_manager/database/: __init__.py  engine.py
recipe_manager/database/models/: __init__.py  ingredient.py  recipe.py  step.py
recipe_manager/rest_api/: __init__.py  controller.py
task-manager/: app.py
task-manager/static/: style.css
task-manager/templates/: index.html
tests/: conftest.py  test_app.py
tests/database/: conftest.py  test_engine.py
tests/database/models/: test_recipe.py
tests/rest_api/: test_controller.py
