[tool.poetry]
name = "recipe_manager"
version = "0.1.0"
description = "REST api for tracking recipes"
authors = ["Jordan Cottle"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.17"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pylint = "^2.8.3"
pytest-cov = "^2.12.1"
black = "^21.5b2"

[tool.poetry.scripts]
run = "scripts:run"
debug = "scripts:debug"
unit_test = "scripts:test"
check = "scripts:static_analysis"
db_init = "scripts:setup_db"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
